syntax = "proto3";

message TagDefault {
    required bool boolean = 1;
    required double number = 2;
    required string string = 3;
    required string text = 4;
    required string template = 5;
    oneof boolean_and_number_and_string {
        bool v6 = 6;
        double v7 = 7;
        string v8 = 8;
    }
    oneof union_but_boolean {
        bool v9 = 9;
        double v10 = 10;
        string v11 = 11;
    }
    oneof union_but_number {
        bool v12 = 12;
        double v13 = 13;
        string v14 = 14;
    }
    oneof union_but_string {
        bool v15 = 15;
        double v16 = 16;
        string v17 = 17;
    }
    required double vulnerable_range = 18;
    required string vulnerable_template = 19;
    oneof boolean_and_number_and_template {
        bool v20 = 20;
        double v21 = 21;
        string v22 = 22;
    }
}